--- a/lxgg_frontend/css/style.css
+++ b/lxgg_frontend/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Questrial', sans-serif;
     padding: 0;
     margin: 0;
+    background-color: #f5f5f5;
 }
 
 /* SIDEBAR */
@@ -33,23 +34,51 @@ sidebar>a.user {
 }
 
 sidebar>a.user::after {
-    content: url(/icons/box.svg);
+    content: url(/icons/user.svg);
 }
 
 sidebar>a:hover {
-    border-right: solid 3px rgb(251, 167, 108);
-    padding-right: 25px;
     cursor: pointer;
+    background-color: #383838;
 }
 
 sidebar>a.active {
     border-right: solid 3px rgb(245, 124, 39);
     padding-right: 25px;
     cursor: default;
+    background-color: #2b2b2b;
 }
 
+/* MAIN */
 main {
     margin: 20px 20px 20px 100px;
+}
+
+div.search-bar {
+    margin-bottom: 20px;
+}
+
+div.search-bar > input[type="text"]{
+    width: 100%;
+    border: 1px solid #e4e4e4;
+    padding: 14px;
+    font-size: 20px;
+    box-sizing: border-box;
+    outline: none;
+}
+
+div.search-bar > input[type="text"]::-webkit-input-placeholder {
+    color: #bdbdbd;
+}
+
+div.search-bar > input[type="text"]:focus {
+    border-color: rgb(245, 124, 39);
+}
+
+div.panel {
+    background-color: white;
+    padding: 20px;
+    box-shadow: 1px 1px 1px 1px #f0f0f0;
 }
 
 footer {
