--- a/lxgg_frontend/css/style.css
+++ b/lxgg_frontend/css/style.css
@@ -3,6 +3,89 @@ body {
     padding: 0;
     margin: 0;
     background-color: #f5f5f5;
+    color: #3a3a3a;
+    font-size: 20px;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-weight: normal;
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+
+/* INPUTS */
+label {
+    margin-bottom: 10px;
+    display: block;
+}
+
+input[type="text"], input[type="password"]{
+    width: 100%;
+    border: 1px solid #e4e4e4;
+    padding: 12px;
+    font-size: 20px;
+    box-sizing: border-box;
+    outline: none;
+    margin-bottom: 20px;
+}
+
+input[type="text"]::-webkit-input-placeholder,
+input[type="password"]::-webkit-input-placeholder {
+    color: #bdbdbd;
+}
+
+input[type="text"]:focus, input[type="password"]:focus {
+    border-color: rgb(245, 124, 39);
+}
+
+select {
+    width: 100%;
+    border: 1px solid #e4e4e4;
+    padding: 12px;
+    font-size: 20px;
+    box-sizing: border-box;
+    outline: none;
+}
+
+select:focus {
+    border-color: rgb(245, 124, 39);
+}
+
+input[type="submit"], button {
+    background-color: rgb(255, 105, 0);
+    border: 0;
+    padding: 12px 40px;
+    color: #eee;
+    font-size: 20px;
+    border-radius: 2px;
+    outline: none;
+    box-shadow: 1px 1px 1px 1px #f0f0f0;
+    position: relative;
+}
+
+input[type="submit"]:hover, button:hover {
+    background-color: #ff7c21;
+    box-shadow: 1px 1px 1px 1px #bbb;
+    cursor: pointer;
+}
+
+button.loading::before {
+    content: url(/icons/box.svg);
+    animation: 2s infinite forwards spin;
+    animation-timing-function: linear;
+    display: block;
+    height: 24px;
+    position: absolute;
+    left: calc(50% - 12px);
+}
+
+@keyframes spin {
+    from {transform: rotate(0deg);}
+    to {transform: rotate(360deg);}
+}
+
+button.loading>span {
+    opacity: 0;
 }
 
 /* TRANSITIONS */
@@ -24,6 +107,16 @@ body {
     opacity: 0
 }
 
+/* GRID */
+div.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+}
+
+div.grid > .new-row {
+    grid-column: 1;
+}
 
 /* SIDEBAR */
 div.sidebar{
@@ -31,14 +124,19 @@ div.sidebar{
     color: #ccc;
     width: 80px;
     position: fixed;
-    left: 0;
+    left: 0px;
     top: 0;
     bottom: 0;
     display: flex;
     flex-direction: column;
+    transition: left 200ms;
 }
 
-div.sidebar>a.new {
+div.sidebar.hidebar {
+    left: -80px;
+}
+
+div.sidebar>a{
     padding: 28px;
     align-self: center;
 }
@@ -47,46 +145,20 @@ div.sidebar>a.new::after {
     content: url(/icons/plus-square.svg);
 }
 
-div.sidebar>a.containers {
-    padding: 28px;
-    align-self: center;
-}
-
 div.sidebar>a.containers::after {
     content: url(/icons/box.svg);
-}
-
-div.sidebar>a.images {
-    padding: 28px;
-    align-self: center;
 }
 
 div.sidebar>a.images::after {
     content: url(/icons/layers.svg);
 }
 
-
-div.sidebar>a.networking {
-    padding: 28px;
-    align-self: center;
-}
-
 div.sidebar>a.networking::after {
     content: url(/icons/activity.svg);
 }
 
-div.sidebar>a.host {
-    padding: 28px;
-    align-self: center;
-}
-
 div.sidebar>a.host::after {
     content: url(/icons/server.svg);
-}
-
-div.sidebar>a.settings {
-    padding: 28px;
-    align-self: center;
 }
 
 div.sidebar>a.settings::after {
@@ -94,8 +166,6 @@ div.sidebar>a.settings::after {
 }
 
 div.sidebar>a.user {
-    padding: 28px;
-    align-self: center;
     margin-top: auto;
 }
 
@@ -120,33 +190,19 @@ main {
     margin: 20px 20px 20px 100px;
 }
 
-div.search-bar {
-    margin-bottom: 20px;
-}
-
-div.search-bar > input[type="text"]{
-    width: 100%;
-    border: 1px solid #e4e4e4;
-    padding: 14px;
-    font-size: 20px;
-    box-sizing: border-box;
-    outline: none;
-}
-
-div.search-bar > input[type="text"]::-webkit-input-placeholder {
-    color: #bdbdbd;
-}
-
-div.search-bar > input[type="text"]:focus {
-    border-color: rgb(245, 124, 39);
-}
-
 div.panel {
     background-color: white;
     padding: 20px;
     box-shadow: 1px 1px 1px 1px #f0f0f0;
 }
 
+/* LOGIN */
+div.login {
+    width: 300px;
+    margin: 200px auto;
+}
+
+/* FOOTER */
 footer {
 
 }
