Generate sql tables when ran for the first time, along with an admin account and randomly generated passwd

--- a/lxgg_frontend/css/style.css
+++ b/lxgg_frontend/css/style.css
@@ -45,6 +45,7 @@ select {
     font-size: 20px;
     box-sizing: border-box;
     outline: none;
+	background-color: inherit;
 }
 
 select:focus {
@@ -139,6 +140,7 @@ div.sidebar.hidebar {
 div.sidebar>a{
     padding: 28px;
     align-self: center;
+	outline: none;
 }
 
 div.sidebar>a.new::after {
