--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,8 @@ h6 {
 
 /* INPUTS */
 
-label {
-    margin-bottom: 10px;
-    display: block;
+label > p {
+    margin: 0 0 10px;
 }
 
 input[type="text"],
@@ -58,6 +57,48 @@ input[type="text"]:focus,
 input[type="password"]:focus,
 textarea:focus {
     border-color: rgb(245, 124, 39);
+}
+
+label.cust-check {
+	cursor: pointer;
+	margin-bottom: 12px;
+	display: block;
+}
+
+label.cust-check>input[type="checkbox"] {
+	opacity: 0;
+	position: absolute;
+}
+
+label.cust-check>p {
+	display: flex;
+	align-items: center;
+}
+
+label.cust-check>p:before {
+	display: inline-block;
+	content: '';
+	width: 15px;
+	height: 15px;
+	background-color: white;
+	border: solid 2px #e4e4e4;
+	margin-right: 5px;
+	border-radius: 2px;
+	transition: border-color 400ms;
+}
+
+label:hover.cust-check>p:before {
+	border-color: rgb(245, 124, 39);
+}
+
+label.cust-check>input[type="checkbox"]:focus~p:before {
+	border-color: rgb(245, 124, 39)!important;
+}
+
+label.cust-check>input[type="checkbox"]:checked~p:before {
+    border-color: rgb(245, 124, 39);
+    background-color: rgb(245, 124, 39);
+	background-image: url(/static/icons/check.svg);
 }
 
 textarea {
@@ -235,8 +276,8 @@ div.sidebar>a.host::before {
     content: url(/static/icons/server.svg);
 }
 
-div.sidebar>a.settings::before {
-    content: url(/static/icons/settings.svg);
+div.sidebar>a.storage::before {
+    content: url(/static/icons/hard-drive.svg);
 }
 
 div.sidebar>a.user {
@@ -311,15 +352,15 @@ div.panel {
     flex-grow: 1;
 }
 
-.container-details > p {
+.container-details > p, .host-details > p {
     font-weight: bold;
     margin: 0 0 8px;
 }
 
-.container-details > p > span {
+.container-details > p > span, .host-details > p > span {
     font-weight: normal;
 }
-.container-details > p.padded {
+.container-details > p.padded, .host-details > p.padded {
     padding-left: 60px;
     font-weight: normal;
 }
@@ -345,10 +386,15 @@ thead td {
 
 td {
     padding: 20px;
+    vertical-align: top;
 }
 
 tbody tr {
     border-bottom: solid 1px #dedede;
+}
+
+tbody td > p {
+    margin: 0 0 5px;
 }
 
 /* FOOTER */
